# qualhook

./: .gitignore  .golangci.bck.yml  .golangci.yml  .pre-commit-config.yaml  .qualhook.json  .qualhook.json.old  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  lint_output.txt  tasks.md
.claude/: settings.json
.claude/agents/: code-quality-reviewer.md  test-quality-auditor.md
.github/workflows/: ci.yml  release.yml  test-metrics.yml
benchmark_results/: benchmarks_20250722_230057.txt  benchmarks_20250723_002049.txt  performance_20250723_002822.txt  performance_summary.md  startup_test.go  task27_completion_report.md
cmd/qualhook/: ai-config.go  base_command.go  command_unit_test.go  commands_integration_test.go  commands_test.go  completion.go  config.go  e2e_test.go  execute.go  execute_test.go  format.go  integration_test.go  lint.go  main.go  main_test.go  man.go  startup_bench_test.go  startup_optimization.go.disabled  template.go  test.go  typecheck.go
docs/: README.md  claude-code-integration.md  configuration-schema.md  troubleshooting.md  user-guide.md
examples/: CONFIGURATION_REFERENCE.md  README.md
examples/custom-commands/: database-migrations.json  (+2 more)
integration/: monorepo_test.go
scripts/: coverage.sh  generate_test_dashboard.py  monitor_test_quality.sh  run_benchmarks.sh  run_performance_tests.sh  setup-dev.sh  test_metrics.sh  visualize_test_trends.py
test/: README.md
test/fixtures/projects/python/: .qualhook.json  main.py  pyproject.toml  test_main.py
test_metrics/: README.md  dashboard.html  trend_data.json
(+225 files in other folders)
